<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_weight="0.7"
        android:layout_height="0dp"
        android:contentDescription="@string/logo_description"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView2Welcome_eng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/welcome_eng" />

    <TextView
        android:id="@+id/textView3Welcome_ukr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/welcome_ukr" />

    <TextView
        android:id="@+id/textView4Welcome_rus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/welcome_rus" />
    <TextView
        android:id="@+id/textView5Welcome_rom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/welcome_rom" />

    <TextView
        android:id="@+id/textView6Welcome_arm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/welcome_arm" />

    <Button
        android:id="@+id/button2_lang_eng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBrown"
        android:layout_margin="5dp"
        android:onClick="onClickChooseLangEng"
        android:text="@string/btn_lang_eng" />

    <Button
        android:id="@+id/button3_lang_ukr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBrown"
        android:layout_margin="5dp"
        android:onClick="onClickChooseLangUkr"
        android:text="@string/btn_lang_ukr" />

    <Button
        android:id="@+id/button4_lang_rus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBrown"
        android:layout_margin="5dp"
        android:onClick="onClickChooseLangRus"
        android:text="@string/btn_lang_rus" />
    <Button
        android:id="@+id/button5_lang_rom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBrown"
        android:layout_margin="5dp"
        android:onClick="onClickChooseLangRom"
        android:text="@string/btn_lang_rom" />

    <Button
        android:id="@+id/button6_lang_arm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBrown"
        android:layout_margin="5dp"
        android:onClick="onClickChooseLangArm"
        android:text="@string/btn_lang_arm" />
</LinearLayout>